guides/v2.1/release-notes/thirdparty_ce.md
---
group: release-notes
subgroup: 99_third
menu_title: Magento Open Source third-party licenses
title: Magento Open Source third-party licenses
menu_order: 1
version: 2.1
github_link: release-notes/thirdparty_ce.md
---

This page contains links to license agreements of the third party 组件 used within Magento Open Source (formerly Community Edition).  Click the **License** links to view the end user license agreement for the corresponding software.


Name|Version|License Name|Available From|Link to License
---|---|---|---|---
Zend Framework|2.4.6|BSD-3-Clause|[Source](http://framework.zend.com/)|[License](https://framework.zend.com/license)
colinmollenhour/credis || MIT|[Source](https://github.com/colinmollenhour/credis)|[License](https://github.com/colinmollenhour/credis/blob/master/LICENSE)
colinmollenhour/php-redis-session-abstract || BSD-3-Clause|[Source](https://github.com/colinmollenhour/php-redis-session-abstract)|[License](https://github.com/colinmollenhour/php-redis-session-abstract#license)
colinmollenhour/cache-backend-file |1.4| BSD-3-Clause|[Source](https://github.com/colinmollenhour/Cm_Cache_Backend_Redis)|[License](https://github.com/colinmollenhour/Cm_Cache_Backend_Redis/blob/master/Cm/Cache/Backend/Redis.php)
colinmollenhour/cache-backend-redis |1.9| BSD-3-Clause|[Source](https://github.com/colinmollenhour/Cm_Cache_Backend_File)|[License](https://github.com/colinmollenhour/Cm_Cache_Backend_File/blob/master/File.php)
composer/composer |1.0.0-beta1| MIT|[Source](https://github.com/composer/composer)|[License](https://github.com/composer/composer/blob/master/LICENSE)
monolog/monolog |1.16.0| MIT|[Source](https://github.com/Seldaek/monolog)|[License](https://github.com/Seldaek/monolog/blob/master/LICENSE)
oyejorge/less.php |1.7.0| Apache-2.0|[Source](https://github.com/oyejorge/less.php)|[License](https://github.com/oyejorge/less.php/blob/master/LICENSE)
pelago/emogrifier |0.1.1| MIT|[Source](https://github.com/jjriv/emogrifier)|[License](https://github.com/jjriv/emogrifier/blob/master/LICENSE)
tubalmartin/cssmin |2.4.8-p4| BSD-3-Clause|[Source](https://github.com/tubalmartin/YUI-CSS-compressor-PHP-port)|
braintree/braintree_php |3.7.0| MIT|[Source](https://github.com/braintree/braintree_php)|[License](https://github.com/braintree/braintree_php/blob/master/LICENSE)
symfony/console|2.3|MIT|[Source](https://github.com/symfony/console)|[License](https://github.com/symfony/console/blob/master/LICENSE)
symfony/config || MIT|[Source](https://github.com/symfony/config)|[License](https://github.com/symfony/config/blob/master/LICENSE)
symfony/dependency-injection || MIT|[Source](https://github.com/symfony/dependency-injection)|[License](https://github.com/symfony/dependency-injection/blob/master/LICENSE)
symfony/event-dispatcher |2.1| MIT|[Source](https://github.com/symfony/event-dispatcher)|[License](https://github.com/symfony/event-dispatcher/blob/master/LICENSE)
symfony/filesystem || MIT|[Source](https://github.com/symfony/filesystem)|[License](https://github.com/symfony/filesystem/blob/master/LICENSE)
symfony/finder || MIT|[Source](https://github.com/symfony/finder)|[License](https://github.com/symfony/finder/blob/master/LICENSE)
symfony/process |2.1| MIT|[Source](https://github.com/symfony/process)|[License](https://github.com/symfony/process/blob/master/LICENSE)
symfony/stopwatch || MIT|[Source](https://github.com/symfony/stopwatch)|[License](https://github.com/symfony/stopwatch/blob/master/LICENSE)
symfony/yaml || MIT|[Source](https://github.com/symfony/yaml)|[License](https://github.com/symfony/yaml/blob/master/LICENSE)
phpseclib/phpseclib |2.0| MIT|[Source](https://github.com/phpseclib/phpseclib)|[License](https://github.com/phpseclib/phpseclib/blob/master/LICENSE)
tedivm/jshrink |1.0.1| BSD-3-Clause|[Source](https://github.com/tedious/Jshrink)|[License](https://github.com/tedious/JShrink/blob/master/LICENSE)
sjparkinson/static-review |4.1| MIT|[Source](https://github.com/sjparkinson/static-review)|[License](https://github.com/sjparkinson/static-review/blob/master/LICENSE)
phpunit/phpunit |4.1.0| BSD-3-Clause|[Source](https://github.com/sebastianbergmann/phpunit)|[License](https://github.com/sebastianbergmann/phpunit/blob/master/LICENSE)
squizlabs/php_codesniffer |1.5.3| BSD-3-Clause|[Source](https://github.com/squizlabs/PHP_CodeSniffer)|[License](https://github.com/squizlabs/PHP_CodeSniffer/blob/master/licence.txt)
phpmd/phpmd |2.3| BSD-3-Clause|[Source](https://github.com/phpmd/phpmd)|[License](https://github.com/phpmd/phpmd/blob/master/LICENSE)
pdepend/pdepend |2.2.2| BSD-3-Clause|[Source](https://github.com/pdepend/pdepend)|[License](https://github.com/pdepend/pdepend/blob/master/LICENSE)
fabpot/php-cs-fixer |1.2| MIT|[Source](https://www.versioneye.com/php/fabpot:php-cs-fixer/dev-master)|[License](http://spdx.org/licenses/MIT.html)
lusitanian/oauth |0.3| MIT|[Source](https://github.com/Lusitanian/PHPoAuthLib)|[License](https://github.com/Lusitanian/PHPoAuthLib/blob/master/LICENSE)
sebastian/phpcpd|2.0.0|BSD-3-Clause|[Source](https://github.com/sebastianbergmann/phpcpd)|[License](https://github.com/sebastianbergmann/phpcpd/blob/master/LICENSE)
trentrichardson/jquery-timepicker-addon|1.4.3|MIT|[Source](https://github.com/trentrichardson/jQuery-Timepicker-Addon)|[License](https://github.com/trentrichardson/jQuery-Timepicker-Addon/blob/master/LICENSE-MIT)
jquery|1.11.0 |MIT|[Source](https://jquery.com/)|[License](https://jquery.org/license/)
blueimp/jquery-file-upload|1.4.3|MIT|[Source](https://github.com/blueimp/jQuery-File-Upload)|[License](https://opensource.org/licenses/MIT)
jqueryui|1.10.4||[Source](https://github.com/jquery/jqueryui.com)|[License](https://github.com/jquery/jqueryui.com/blob/master/LICENSE.txt)
bootstrap|3.1.1 |MIT|[Source](http://getbootstrap.com)|[License](https://github.com/twbs/bootstrap/blob/master/LICENSE)
tiny_mce |3.4.7|GNU LGPL 2.1|[Source](https://www.tinymce.com)|[License](https://github.com/tinymce/tinymce/blob/master/LICENSE.TXT)
doctrine/instantiator || MIT|[Source](https://github.com/doctrine/instantiator)|[License](https://github.com/doctrine/instantiator/blob/master/LICENSE)
justinrainbow/json-schema || BSD-3-Clause|[Source](https://github.com/justinrainbow/json-schema)|[License](https://github.com/justinrainbow/json-schema/blob/master/LICENSE)
league/climate || MIT|[Source](https://github.com/thephpleague/climate)|[License](https://github.com/thephpleague/climate/blob/master/LICENSE.md)
phpunit/php-code-coverage || BSD-3-Clause|[Source](https://github.com/sebastianbergmann/php-code-coverage)|[License](https://github.com/sebastianbergmann/php-code-coverage/blob/master/LICENSE)
phpunit/php-file-iterator || BSD-3-Clause|[Source](https://github.com/sebastianbergmann/php-file-iterator)|[License](https://github.com/sebastianbergmann/php-file-iterator/blob/master/LICENSE)
phpunit/php-text-template || BSD-3-Clause|[Source](https://github.com/sebastianbergmann/php-text-template)|[License](https://github.com/sebastianbergmann/php-text-template/blob/master/LICENSE)
phpunit/php-timer || BSD-3-Clause|[Source](https://github.com/sebastianbergmann/php-timer)|[License](https://github.com/sebastianbergmann/php-timer/blob/master/LICENSE)
phpunit/php-token-stream || BSD-3-Clause|[Source](https://github.com/sebastianbergmann/php-token-stream)|[License](https://github.com/sebastianbergmann/php-token-stream/blob/master/LICENSE)
phpunit/phpunit-mock-objects || BSD-3-Clause|[Source](https://github.com/sebastianbergmann/phpunit-mock-objects)|[License](https://github.com/sebastianbergmann/phpunit-mock-objects/blob/master/LICENSE)
psr/log || MIT|[Source](https://github.com/php-fig/log)|[License](https://github.com/php-fig/log/blob/master/LICENSE)
sebastian/comparator || BSD-3-Clause|[Source](https://github.com/sebastianbergmann/comparator)|[License](https://github.com/sebastianbergmann/comparator/blob/master/LICENSE)
sebastian/diff || BSD-3-Clause|[Source](https://github.com/sebastianbergmann/diff)|[License](https://github.com/sebastianbergmann/diff/blob/master/LICENSE)
sebastian/environment || BSD-3-Clause|[Source](https://github.com/sebastianbergmann/environment)|[License](https://github.com/sebastianbergmann/environment/blob/master/LICENSE)
sebastian/exporter || BSD-3-Clause|[Source](https://github.com/sebastianbergmann/exporter)|[License](https://github.com/sebastianbergmann/exporter/blob/master/LICENSE)
sebastian/recursion-context || BSD-3-Clause|[Source](https://github.com/sebastianbergmann/recursion-context)|[License](https://github.com/sebastianbergmann/recursion-context/blob/master/LICENSE)
sebastian/version || BSD-3-Clause|[Source](https://github.com/sebastianbergmann/version)|[License](https://github.com/sebastianbergmann/version/blob/master/LICENSE)
seld/jsonlint || MIT|[Source](https://github.com/Seldaek/jsonlint)|[License](https://github.com/Seldaek/jsonlint/blob/master/LICENSE)
Cm ||BSD-3-Clause|[Source](https://github.com/colinmollenhour/Cm_RedisSession)|[License 1](https://github.com/colinmollenhour/Cm_RedisSession/blob/master/Cm_RedisSession.xml) [License 2](http://opensource.org/licenses/BSD-3-Clause)
extjs |1.0.1|Open GPL 3.0 (when was included)|[Source](https://www.sencha.com/)|[License](https://www.gnu.org/licenses/lgpl.html)
fotorama|4.6.4 |MIT|[Source](https://github.com/artpolikarpov/fotorama)|[License](https://github.com/artpolikarpov/fotorama/blob/master/MIT-LICENSE)
knockoutjs|3.3.0 |MIT|[Source](http://knockoutjs.com/downloads/index.html)|[Source](https://github.com/knockout/knockout/blob/master/LICENSE)
less |2.3.1|Apache License Version 2.0|[Source](https://github.com/less/less.js)|[License](https://github.com/less/less.js/blob/master/LICENSE)
modernizr|2.6.1 |MIT|[Source](https://github.com/Modernizr/Modernizr)|[License](https://github.com/Modernizr/Modernizr/blob/master/LICENSE)
prototype|1.7 |MIT|[Source](http://prototypejs.org)|[License](https://github.com/sstephenson/prototype/blob/master/LICENSE)
requirejs |2.1.11|new BSD or MIT licensed|[Source](https://github.com/requirejs/requirejs)|[License](https://github.com/requirejs/requirejs/blob/master/LICENSE)
scriptaculous|1.8.2 |MIT|[Source](http://script.aculo.us)|[License](http://madrobby.github.io/scriptaculous/license/)
angular|1.2.16 |MIT|[Source](https://github.com/angular/angular.js)|[License](https://github.com/angular/angular.js/blob/master/LICENSE)
angular-clickout|1.0.2 |MIT|[Source](https://github.com/neoziro/angular-clickout)|[License](https://github.com/neoziro/angular-clickout#license)
angular-ng-dialog|0.4.0 |MIT|[Source](https://github.com/likeastore/ngDialog)|[License](https://github.com/neoziro/angular-clickout#license)
angular-ng-storage|0.3.0 |MIT|[Source](https://github.com/gsklee/ngStorage)|[License](https://github.com/gsklee/ngStorage/blob/master/LICENSE)
angular-sanitize|1.2.14 |MIT|[Source](https://code.angularjs.org/1.2.14/angular-sanitize.min.js)|[License](https://code.angularjs.org/1.2.14/angular-sanitize.min.js)
angular-ui-bootstrap|0.11.0 |MIT|[Source](http://angular-ui.github.io/bootstrap)|[License](https://github.com/angular-ui/bootstrap/blob/master/LICENSE)
angular-ui-router|0.2.10 |MIT|[Source](http://angular-ui.github.com/)|[License](http://www.opensource.org/licenses/MIT)
FormData for XMLHttpRequest 2 |-| MIT|[Source](https://gist.github.com/Rob--W/8b5adedd84c0d36aba64)|[License](https://gist.github.com/Rob--W/8b5adedd84c0d36aba64)
matchMedia |-| MIT/BSD|[Source](https://github.com/paulirish/matchMedia.js/)|[License](https://github.com/paulirish/matchMedia.js/blob/master/LICENSE.txt)
moment.js |2.8.1| MIT|[Source](http://momentjs.com)|[License](http://momentjs.com/downloads/moment.js)
MutationObserver |-| BSD|[Source](http://polymer.github.io)|[License](http://polymer.github.io/LICENSE.txt)
Underscore |1.8.2| MIT|[Source](http://underscorejs.org)|[License](https://github.com/jashkenas/underscore/blob/master/LICENSE)
LinLibertineFont|-|GPL 2.0 and the Open Fonts License 1.0|[Source](http://www.linuxlibertine.org)|[License 1](http://www.gnu.org/licenses/old-licenses/gpl-2.0.html) [License 2](http://scripts.sil.org/cms/scripts/page.php)
Swagger |2.0| Apache 2|[Source](https://github.com/swagger-api/swagger-ui)|[License](http://swagger.io/license/)
